@@ -4,6 +4,10 @@
 # BREAK = change breaks existing code
 # BUG	= fixed a bug that was (or could have been) crashing
 
+Jun 16, 2006
+    Allowed passing in the destination surface to the transform.scale and
+     transform.scale2x.  This is faster if reusing the surface.
+
 Jun 15, 2006
     [BUG] Font fix for empty string causing segfault.  Added unittest.
 
